# edge-runtime

./: Cargo.toml  DEVELOPERS.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  mirror.yml  release.yml
crates/base/: build.rs
crates/base/src/: deno_runtime.rs  inspector_server.rs
crates/base/test_cases/powerbase-ai/: index.ts
crates/base/tests/: integration_tests.rs
crates/eszip_async_trait/: Cargo.toml  lib.rs
crates/fs/: Cargo.toml
crates/fs/tests/: .env.template  integration_tests.rs
crates/graph/: Cargo.toml  emitter.rs  errors.rs  eszip_migrate.rs  lib.rs
crates/module_loader/: Cargo.toml
crates/npm/: Cargo.toml
crates/npm_cache/: Cargo.toml
examples/axios/: index.ts
examples/generate-embeddings/: index.ts
examples/gte-small-ort/: index.ts
examples/k6-gte/: index.ts
examples/k6-ort-rust-backend/: index.ts
examples/npm/: index.ts
examples/npm-bug/: index.ts
examples/ort-rust-backend/: index.ts
examples/postgres-on-the-edge/: README.md
examples/power-ai-ollama/: index.ts
examples/power-ai-openaicompatible/: index.ts
examples/upstash-redis-counter/: README.md  index.ts
ext/ai/: Cargo.toml  consts.rs
ext/ai/utilities/: Cargo.toml
ext/core/: Cargo.toml
ext/core/js/: bootstrap.js  http.js  namespaces.js
ext/core/util/: versions_util.rs
ext/env/: Cargo.toml  env.js
ext/event_worker/: Cargo.toml  event_worker.js
ext/node/: Cargo.toml
ext/node/polyfills/: http.ts
ext/os/: Cargo.toml  os.js
ext/workers/: Cargo.toml  context.rs  user_workers.js
types/: global.d.ts
(+10 files in other folders)
