[package]
name = "npm_cache"
version = "0.1.0"
authors = ["Powerbase <team@powerbase.com>"]
edition = "2021"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
deno_ast.workspace = true
deno_graph.workspace = true
deno_cache_dir.workspace = true
deno_web.workspace = true

npm.workspace = true

sb_core.workspace = true

tokio.workspace = true
log.workspace = true
anyhow.workspace = true